--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,13 @@
 .env.development.local
 .env.test.local
 .env.production.local
+*.xd
+*.sketch
+*.fig
+.prettierignore
+README-template.md
+style-guide.md
+
 
 npm-debug.log*
 yarn-debug.log*
